--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Lab 2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <link rel="stylesheet" media="screen" href="css/reset.css" />
+    <link rel="stylesheet" media="screen" href="css/screen.css" />
   </head>
   <body>
   </body>
