Add header and form elements
Add header asking for users information, added form asking for email address, phone number, and DoB. Added a submit button.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
     <link rel="stylesheet" media="screen" href="css/screen.css" />
   </head>
   <body>
+    <header>
+      <h1>Enter your information</h1>
+    </header>
+    <form method="POST" autocomplete="on" action="#null">
+      <div id="input_boxes">
+        <label>E-mail Address: <input type="email" name="email_field" placeholder="email" /></label>
+        <label>Phone Number: <input type="tel" name="phone_field" placeholder="phone number" /></label>
+        <label>Date Of Birth: <input type="date" name="dob_field" /></label>
+      </div>
+      <div id="submit_btn">
+        <button type="submit">Submit</button>
+      </div>
+    </form>
   </body>
 </html>
