Add 3 layers of fonts and add link to google font reference
Added 3 fonts, first Roboto, then Arial, and verdana.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Lab 2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="css/reset.css" />
     <link rel="stylesheet" media="screen" href="css/screen.css" />
   </head>
