--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <title>Lab 2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="css/reset.css" />
     <link rel="stylesheet" media="screen" href="css/screen.css" />
   </head>
   <body>
     <header>
-      <h1>Enter your information</h1>
+      <h1>GPU availability list</h1>
     </header>
+    <p>
+      Sign up with your information below so that you can get the latest news about which
+      high quality gpu, cpu, ram, and motherboards are back in stock and which seller has them.
+    </p>
     <form method="POST" autocomplete="on" action="#null">
       <ol>
         <li>
