Add 2 more image files and add 3 img elements
Added 2 files for images. Added 3 img elements and a div element containing them.

--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
         </li>
      </ol>
     </form>
+    <div id="rtximg">
+      <img src="images/rtx3060.png" alt="RTX3060 GPU">
+      <img src="images/rtx3070dual.png" alt="RTX3070 dual GPU">
+      <img src="images/rtx3090.png" alt="RTX3090 ti GPU">
+    </div>
   </body>
 </html>
