Add css for img element and add an input checkbox
Added css for img element so it would display properly in the page. Added a check box in the form

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <h1>GPU availability list</h1>
     </header>
     <p>
-      Sign up with your information below so that you can get the latest news about which
-      high quality gpu, cpu, ram, and motherboards are back in stock and which seller has them.
+      Sign up with your information below so that you can get the latest news on up and coming GPUs as well as which
+      high quality GPUs are back in stock.
     </p>
     <form method="POST" autocomplete="on" action="#null">
       <ol>
@@ -23,6 +23,10 @@
         </li>
         <li>
           <label i="phone-submit">Phone Number: <input type="tel" name="phone_field" placeholder="phone number" /></label>
+        </li>
+        <li>
+          <input type="checkbox" id="phonealert-chkbx" name="phoneAlert">
+          <label for="phoneAlert">send me phone alerts for high demand items</label>
         </li>
         <li>
           <label id="dob-submit">Date Of Birth: <input type="date" name="dob_field" /></label>
