Add a min-width media query and update label
Added a min-width query for 750px so it displays the images better the smaller the screen gets.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </li>
         <li>
           <input type="checkbox" id="gpunews-chkbx" name="gpuNews">
-          <label for="gpuNews">send me news about latest GPUs coming out</label>
+          <label for="gpuNews">send me news about latest GPUs and other computer hardware</label>
         </li>
         <li>
           <button id="btn-submit" type="submit">Submit</button>
