Update form and button element changed font and input css
Added padding for input and increased entire documents font size. Removed old picture. Updated modular scale and made button be a call to action button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Sign up with your information below so that you can get a heads up on 
       which high quality GPUs are back in stock or have just entered the market.
     </p>
-    <form method="POST" autocomplete="on" action="#null">
+    <form method="get" autocomplete="on" action="#null">
       <ol>
         <li>
           <label id="name-submit">Name: <input type="text" name="name_field" placeholder="name" /></label>
@@ -36,7 +36,7 @@
           <label for="gpuNews">send me news about latest GPUs and other computer hardware</label>
         </li>
         <li>
-          <button id="btn-submit" type="submit">Submit</button>
+          <button id="btn-submit" type="submit">Sign up</button>
         </li>
      </ol>
     </form>
