Add error element and css
Added a hidden error message that will display if the user did not enter all information

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
       which high quality GPUs are back in stock or have just entered the market.
     </p>
     <form method="get" autocomplete="on" action="#null">
+      <div id="error">Some or all necessary fields are missing. Necessary fields are marked with *</div>
       <ol>
         <li>
-          <label id="name-submit">Name: <input type="text" name="name_field" placeholder="name" /></label>
+          <label id="name-submit">*Name/Alias: <input type="text" name="name_field" placeholder="name" /></label>
         </li>
         <li>
-          <label id="email-submit">E-mail Address: <input type="email" name="email_field" placeholder="email" /></label>
+          <label id="email-submit">*E-mail Address: <input type="email" name="email_field" placeholder="email" /></label>
         </li>
         <li>
           <label i="phone-submit">Phone Number: <input type="tel" name="phone_field" placeholder="phone number" /></label>
