Add function to site js and make check box bigger
Added a function in the site js page to check if the user has entered the required information

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Sign up with your information below so that you can get a heads up on 
       which high quality GPUs are back in stock or have just entered the market.
     </p>
-    <form method="get" autocomplete="on" action="#null">
+    <form name="newsLetter" method="get" autocomplete="on" action="#null">
       <div id="error">Some or all necessary fields are missing. Necessary fields are marked with *</div>
       <ol>
         <li>
