--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="css/reset.css" />
     <link rel="stylesheet" media="screen" href="css/screen.css" />
+    <script src="js/site.js" async></script>
   </head>
   <body>
     <header>
@@ -37,7 +38,7 @@
           <label for="gpuNews">send me news about latest GPUs and other computer hardware</label>
         </li>
         <li>
-          <button id="btn-submit" type="submit">Sign up</button>
+          <button id="btn-submit" type="submit" onclick="checkRequirements()" value="Sign Up">Sign up</button>
         </li>
      </ol>
     </form>
