Fix trailing slashes and other problems with html validation

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Lab 2</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" media="screen" href="css/reset.css" />
-    <link rel="stylesheet" media="screen" href="css/screen.css" />
+    <link rel="stylesheet" media="screen" href="css/reset.css">
+    <link rel="stylesheet" media="screen" href="css/screen.css">
     <script src="js/site.js" async></script>
   </head>
   <body>
@@ -21,21 +21,21 @@
       <div id="error">Some or all necessary fields are missing. Necessary fields are marked with *</div>
       <ol>
         <li>
-          <label id="name-submit">*Name/Alias: <input type="text" name="name_field" placeholder="name" /></label>
+          <label id="name-submit">*Name/Alias: <input type="text" name="name_field" placeholder="name"></label>
         </li>
         <li>
-          <label id="email-submit">*E-mail Address: <input type="email" name="email_field" placeholder="email" /></label>
+          <label id="email-submit">*E-mail Address: <input type="email" name="email_field" placeholder="email"></label>
         </li>
         <li>
-          <label i="phone-submit">Phone Number: <input type="tel" name="phone_field" placeholder="phone number" /></label>
+          <label id="phone-submit">Phone Number: <input type="tel" name="phone_field" placeholder="phone number"></label>
         </li>
         <li>
           <input type="checkbox" id="phonealert-chkbx" name="phoneAlert">
-          <label for="phoneAlert">send me phone alerts for high demand items</label>
+          <label for="phonealert-chkbx">send me phone alerts for high demand items</label>
         </li>
         <li>
           <input type="checkbox" id="gpunews-chkbx" name="gpuNews">
-          <label for="gpuNews">send me news about latest GPUs and other computer hardware</label>
+          <label for="gpunews-chkbx">send me news about latest GPUs and other computer hardware</label>
         </li>
         <li>
           <button id="btn-submit" type="submit" onclick="checkRequirements()" value="Sign Up">Sign up</button>
