Change the button element into an input element
Changed the button element to an input element for a proper submit input.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <label for="gpunews-chkbx">send me news about latest GPUs and other computer hardware</label>
         </li>
         <li>
-          <button id="btn-submit" type="submit" onclick="checkRequirements()" value="Sign Up">Sign up</button>
+          <input type="submit" id="submit-btn" name="submitBtn" onclick="checkRequirements()" value="Sign Up">
         </li>
      </ol>
     </form>
